src/test/deca/syntax/invalid/instanceof-space.synt
instanceof-space.deca:3:
